--- a/style.css
+++ b/style.css
@@ -14,15 +14,14 @@ div.quickstats.ip {
 	padding: 8px;  
 }
 div.quickstats span.total {
-       font-size:115%;
-       	   
+       font-size:115%;       	   
 	   color:blue; 
 }   
 
 div.quickstats.basics { padding:2px; }
 
 /* placeholders for individual css formatting */
-div.quickstats.misc span.title, div.quickstats.page span.title, div.quickstats.countrie span.title {}
+div.quickstats.misc span.title, div.quickstats.page span.title, div.quickstats.countries span.title {}
 div.quickstats.misc { }
 div.quickstats.pages {}
 div.quickstats.countries { }
