edit to style.css

--- a/style.css
+++ b/style.css
@@ -26,4 +26,5 @@ div.quickstats.misc span.title, div.quickstats.page span.title, div.quickstats.c
 div.quickstats.misc { }
 div.quickstats.pages {}
 div.quickstats.countries { }
+div.quickstats.ua {}
 
